--- a/src/app/index.css
+++ b/src/app/index.css
@@ -4,3 +4,36 @@
 body{
   margin:0;
 }
+.header{
+  display: flex;
+  /* flex-direction: column; */
+  width: 100%;
+  background-color: #091d42  ;
+  align-items: center;
+  padding-inline: 20px;
+justify-content: space-around;
+}
+.icon{
+  font-size: 30px;
+  color: #5abf9a; 
+
+}
+.title{
+  color: #5abf9a; 
+  font-size: 70px ;
+  align-self: center;
+}
+.body{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  
+}
+.section1{}
+.subtitle{
+  font-size: 30px ;
+}
+.section2{
+  
+}
