--- a/src/app/index.css
+++ b/src/app/index.css
@@ -1,39 +1,68 @@
-.container{
-  background-color: white;
-}
+.container{}
 body{
   margin:0;
+  
 }
 .header{
-  display: flex;
-  /* flex-direction: column; */
   width: 100%;
-  background-color: #091d42  ;
+  display: flex;
+    background-color: #091d42;
   align-items: center;
-  padding-inline: 20px;
-justify-content: space-around;
+  justify-content: space-around;
+  height:200px;
 }
 .icon{
   font-size: 30px;
-  color: #5abf9a; 
-
+  color: white; 
 }
 .title{
-  color: #5abf9a; 
+  color: white;
   font-size: 70px ;
   align-self: center;
 }
 .body{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content:space-around;
+  background-color: white;
   align-items: center;
+  height: 500px;
+}
+.text{
+  font-size: 22px;
+  color: #091d42 ; 
+  margin-inline: 10px;
+  text-align: center;
   
 }
-.section1{}
+.section{
+  background-color: #5ABF9A;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.sobre{
+  font-size: 40px;
+  margin-inline: 10px;
+  
+}
+.section1{
+  width: 100%;
+  text-align: center;
+  background-color: white;
+}
 .subtitle{
-  font-size: 30px ;
+  font-size: 20px ;
+  margin-bottom: 10px;
 }
 .section2{
-  
+  width: 100%;
+  background-color: white;
+}
+.footer{
+  width: 100%;
+  height: 73px;
+  display: flex;
+  background-color: #091d42;
 }
